@@ -1,4 +1,4 @@
-.TH SG_START "8" "March 2008" "sg3_utils\-1.26" SG3_UTILS
+.TH SG_START "8" "February 2010" "sg3_utils\-1.29" SG3_UTILS
 .SH NAME
 sg_start \- send SCSI START STOP UNIT command to start, stop, load or
 eject medium
@@ -6,14 +6,14 @@ eject medium
 .B sg_start
 [\fI0\fR] [\fI1\fR] [\fI\-\-eject\fR] [\fI\-\-help\fR] [\fI\-\-fl=FL\fR]
 [\fI\-\-immed\fR] [\fI\-\-load\fR] [\fI\-\-loej\fR] [\fI\-\-mod=PC_MOD\fR]
-[\fI\-\-noflush\fR] [\fI\-\-pc=PC\fR] [\fI\-\-start\fR] [\fI\-\-stop\fR]
-[\fI\-\-verbose\fR] [\fI\-\-version\fR] \fIDEVICE\fR
+[\fI\-\-noflush\fR] [\fI\-\-pc=PC\fR] [\fI\-\-readonly\fR] [\fI\-\-start\fR]
+[\fI\-\-stop\fR] [\fI\-\-verbose\fR] [\fI\-\-version\fR] \fIDEVICE\fR
 .PP
 .B sg_start
 [\fI\-\-eject\fR] [\fI\-\-fl=FL\fR] [\fI\-i\fR] [\fI\-\-imm=0|1\fR]
 [\fI\-\-load\fR] [\fI\-\-loej\fR] [\fI\-\-mod=PC_MOD\fR] [\fI\-\-noflush\fR]
-[\fI\-\-pc=PC\fR] [\fI\-\-start\fR] [\fI\-\-stop\fR] [\fI\-v\fR] [\fI\-V\fR]
-[\fI0|1\fR] \fIDEVICE\fR
+[\fI\-\-pc=PC\fR] [\fI\-r\fR] [\fI\-\-start\fR] [\fI\-\-stop\fR] [\fI\-v\fR]
+[\fI\-V\fR] [\fI0|1\fR] \fIDEVICE\fR
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
@@ -104,13 +104,19 @@ condition (MMC); 7 for LU_CONTROL (SBC), 0xa (decimal 10) for
 FORCE_IDLE_0 (SBC) and 0xb (decimal 11) for FORCE_STANDBY_0 (SBC). See recent
 SBC\-3, MMC\-5 and SAS drafts at www.t10.org for more information.
 .TP
+\fB\-r\fR, \fB\-\-readonly\fR
+open the \fIDEVICE\fR in read-only mode. Maybe required in Linux to stop a
+nuisance spin\-up if the \fIDEVICE\fR is an ATA disk. The nuisance spin\-up
+may occur at the end of this command negating the effect of the
+\fI\-\-stop\fR option.
+.TP
 \fB\-s\fR, \fB\-\-start\fR
-start (spin\-up) the device. This sets the START bit in the cdb. Using
+start (spin\-up) the \fIDEVICE\fR. This sets the START bit in the cdb. Using
 this option on an already started device is harmless. In the absence of
 other options, this option defaults (i.e. set the START cdb bit).
 .TP
 \fB\-S\fR, \fB\-\-stop\fR
-stop (spin\-down) the device. This clears the START bit in the cdb.
+stop (spin\-down) the \fIDEVICE\fR. This clears the START bit in the cdb.
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
 increase the level of verbosity. Can be used multiple times.
@@ -124,20 +130,20 @@ To avoid confusion, only one of \fI0\fR, \fI1\fR \fI\-\-eject\fR,
 There is an associated "power condition" mode page (0x1a) in which timer
 values can be set for transitioning to either idle or standby state after
 a period of inactivity. The sdparm utility can be used to view the power
-condition mode page and if required change it. If a device is in either
+condition mode page and if required change it. If a \fIDEVICE\fR is in either
 idle or standby power condition state then a REQUEST SENSE command (see
 the sg_requests utility) should yield a sense key of "no sense" and an
 additional sense code of "Low power condition on" on recent SCSI devices.
 .PP
 Ejection of removable media (e.g. 'sg_start \-\-eject /dev/hdd' where
-the device is an ATAPI cd/dvd drive) may be prevented by a prior
+the \fIDEVICE\fR is an ATAPI cd/dvd drive) may be prevented by a prior
 SCSI PREVENT ALLOW MEDIUM REMOVAL command (see sg_prevent). In this
 case this utility should fail with an error generated by the device:
 illegal request / medium removal prevented. This can be overridden
 using sg_prevent or, for example, 'sdparm \-\-command=unlock /dev/hdd'.
 .PP
 The SCSI TEST UNIT READY command can be used to find out whether a
-device is ready to transfer data. If rotating media is stopped or
+\fIDEVICE\fR is ready to transfer data. If rotating media is stopped or
 still coming up to speed, then the TEST UNIT READY command will yield
 a "not ready" sense key and an more informative additional sense
 code. See the sg_turs utility.
@@ -189,9 +195,9 @@ option) is to wait until the media spins down before returning.
 .TP
 \fB\-\-imm\fR=\fI0|1\fR
 when the immediate bit is 1 then this utility returns immediately after the
-device has received the command. When this option is 0 (the default) then the
-utility returns once the command has completed its action (i.e. it waits
-until the device is started or stopped).
+\fIDEVICE\fR has received the command. When this option is 0 (the default)
+then the utility returns once the command has completed its action (i.e. it
+waits until the device is started or stopped).
 .TP
 \fB\-\-load\fR
 load the medium in the drive and start it.
@@ -221,6 +227,9 @@ media. This field was added after sbc3r13.
 where \fIPC\fR is the 'power condition' value (in hex). 0 to f (inclusive)
 are valid. Default value is 0.
 .TP
+\fB\-r\fR
+see the \fI\-\-readonly\fR option above. May be useful for ATA disks.
+.TP
 \fB\-\-start\fR
 start (spin\-up) \fIDEVICE\fR.
 .TP
@@ -238,7 +247,7 @@ Written by K. Garloff and D. Gilbert
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2002\-2008 Kurt Garloff, Douglas Gilbert
+Copyright \(co 2002\-2010 Kurt Garloff, Douglas Gilbert
 .br
 This software is distributed under the GPL version 2. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
